--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -89,35 +89,35 @@
       <div class="box-container">
         <div class="box">
           <img src="/images/menu-1.png" alt="">
-          <h3>tasty and healthy</h3>
-          <div class="price">$15.99 <span>20.99$</span></div>
+          <h3>Organic Kona Coffee</h3>
+          <div class="price">$62.99 <span>110$</span></div>
           <a href="#" class="btn" id="btn-1" >add to cart</a>
         </div>
 
         <div class="box">
           <img src="/images/menu-2.png" alt="">
-          <h3>tasty and healthy</h3>
-          <div class="price">$15.99 <span>20.99$</span></div>
+          <h3>Coffee Granell Wild</h3>
+          <div class="price">$108.99 <span>120.99$</span></div>
           <a href="#" class="btn" id="btn-2">add to cart</a>
         </div>
 
         <div class="box">
           <img src="/images/menu-3.png" alt="">
-          <h3>tasty and healthy</h3>
-          <div class="price">$15.99 <span>20.99$</span></div>
+          <h3>Conventional Kona</h3>
+          <div class="price">$65.99 <span>80.99$</span></div>
           <a href="#" class="btn">add to cart</a>
         </div>
 
         <div class="box">
           <img src="/images/menu-4.png" alt="">
-          <h3>tasty and healthy</h3>
-          <div class="price">$15.99 <span>20.99$</span></div>
+          <h3>Arabica Coffee</h3>
+          <div class="price">$28.99 <span>40.99$</span></div>
           <a href="#" class="btn" id="btn-4">add to cart</a>
         </div>
 
         <div class="box">
           <img src="/images/menu-5.png" alt="">
-          <h3>tasty and healthy</h3>
+          <h3>Monkey Business</h3>
           <div class="price">$15.99 <span>20.99$</span></div>
           <a href="#" class="btn" id="btn-5">add to cart</a>
         </div>
@@ -243,6 +243,6 @@
 <!--about section ends-->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="/front_js/index.js" ></script>
+<script src="/javascript/index.js" ></script>
 </body>
 </html>
