--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,6 +18,10 @@
   transition: .2s linear;
 }
 
+body{
+  color: white;
+}
+
 html{
   font-size: 62.5%;
   overflow-x: hidden;
@@ -519,6 +523,129 @@ main .container{
   color: black;
 }
 
+
+
+/* login page css start here */
+
+.header-header{
+  background-color: var(--main-color);
+  padding: 25px;
+  color: black;
+  font-size: bolder;
+}
+
+section{
+  min-height: 80vh;
+}
+
+.col{
+  margin: 5px;
+  border: 1px solid var(--main-color);
+}
+
+
+#col-1{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.login-form{
+  margin-right: 600px;
+}
+
+section h2{
+  margin-top: 55px;
+  font-size: 55px;
+}
+
+.logo-log{
+  margin-bottom: 25px;
+}
+
+.logo-log img{
+  width:200px;
+}
+
+.context{
+  margin-left: 55px;
+}
+
+.context p{
+  font-size: 25px;
+  margin-top: 15px;
+}
+
+.btn-submit{
+    margin-top: 1rem;
+    display: inline-block;
+    padding: .9rem 3rem;
+    font-size: 1.7rem;
+    color: black;
+    background: var(--main-color);
+    cursor: pointer;
+    text-align: center;
+    border-radius: 5px;
+}
+
+
+section #col-2{
+  width: 100%;
+}
+
+section h3{
+  margin-top: 55px;
+  margin-bottom: 35px;
+  font-size: 55px;
+}
+
+textarea, input {
+  margin-bottom: 25px;
+  padding: 2%;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-weight: bold;
+}
+
+
+input:hover{
+  background-color: var(--main-color);
+  color: black;
+}
+
+
+textarea {
+  min-width: 40%;
+  min-height: 100px;
+}
+
+form > div {
+  margin-bottom: 2%;
+}
+
+/* this will put the textarea under the label */
+form label {
+  display: block;
+}
+
+.user{
+  font-size: 20px;
+}
+
+
+.btn-signup{
+  margin-top: 1rem;
+  display: inline-block;
+  padding: .6rem 2rem;
+  font-size: 1.7rem;
+  color: black;
+  background: var(--main-color);
+  cursor: pointer;
+  text-align: center;
+  border-radius: 5px;
+}
 
 
 /*media quary*/
