--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,51 +1,220 @@
-<div class="cart-items-container" id="cart-items-container">
-  <div class="cart-item" id="cart-item item-one">
-    <img src="/images/cart-item-1.png" alt="">
-    <div class="content">
-      <h3>cart item 01</h3>
-      <div class="price">$15.99</div>
-    </div>
-    <span class="fas fa-times" ></span>
-  </div>
 
-  <div class="cart-item" id="cart-item item-two" >         
-    <img src="/images/cart-item-1.png" alt="">
-    <div class="content">
-      <h3>cart item 02</h3>
-      <div class="price">$15.99</div>
-    </div>
-    <span class="fas fa-times" ></span>
-  </div>
+  <header class="header">
+      <a href="#" class="logo">
+        <img src="/images/logo.png" alt="">
+      </a>
 
-  <div class="cart-item" id="cart-item item-three">      
-    <img src="/images/cart-item-2.png" alt="">
-    <div class="content">
-      <h3>cart item 02</h3>
-      <div class="price">$15.99</div>
-    </div>
-    <span class="fas fa-times" ></span>
-  </div>
+      <nav class="navbar">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#menu">Menu</a>
+        <a href="#products">Products</a>
+        <a href="#reviews">reviews</a>
+        <a href="#contacts">Contacts</a>
+        <a href="#blogs">blogs</a>
+      </nav>
 
-  <div class="cart-item"id="cart-item item-four">        
-    <img src="/images/cart-item-3.png" alt="">
-    <div class="content">
-      <h3>cart item 03</h3>
-      <div class="price">$15.99</div>
-    </div>
-    <span class="fas fa-times" ></span>
-  </div>
+      <div class="icons">
+        <div class="fas fa-search" id="search-btn"></div>
+        <div class="fas fa-shopping-cart" id="cart-btn"></div>
+        <div class="fas fa-bars" id="menu-btn"></div>
+      </div>
+      <div class="search-form">
+        <input type="search" id="search-box" placeholder="search here...">
+        <label for="search-box" class="fas fa-search"></label>
+      </div>
+      
+   </header>   
+   
+   <!--home section starts-->
+    <section class="home" id="home">
 
-  <div class="cart-item" id="cart-item item-five">
-    <img src="/images/cart-item-4.png" alt="">
-    <div class="content">
-      <h3>cart item 04</h3>
-      <div class="price">$15.99</div>
-    </div>
-    <span class="fas fa-times" ></span>
-  </div>
+      <div class="content">
+        <h3>fresh coffe in the morning</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Adipisci possimus, ratione debitis officia soluta laudantium?</p>
+        <a href="" class="btn">get yours now</a>   
+      </div>
+    </section>
+     <!--home section ends-->
 
-  <ul class="ul" id="add-list"></ul>
 
-  <a href="#" class="btn" id="btn">Checkout here</a>
-</div>
-    
+
+    <!--about section starts-->
+      <section class="about" id="about">
+        <h1 class="heading"><span>about</span>us</h1>
+        <div class="row">
+          <div class="image">
+            <img class="img" src="/images/about-img.jpeg" alt="">
+          </div>
+          <div class="content">
+            <h3>what makes our coffee special</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, quibusdam repellendus? Provident vero et, 
+              ea labore voluptate similique dignissimos ullam. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Quos, culpa ex minima dolor molestiae impedit.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis itaque rem asperiores eius. Lorem ipsum dolor sit amet, consectetur adipisicing.</p>  
+            <a href="#menu" class="btn">learn more</a>
+          </div>
+        </div>
+        <div class="cursor"></div>
+      </section>
+    <!--about section ends-->
+
+    <!--menu section starts-->
+    <section class="menu" id="menu">
+      <h1 class="heading">our <span>menu</span></h1>
+      <div class="box-container">
+        <div class="box">
+          <img src="/images/menu-1.png" alt="">
+          <h3>Organic Kona Coffee</h3>
+          <div class="price">$62.99 <span>110$</span></div>
+          <a href="#" class="btn" id="btn-1" >add to cart</a>
+        </div>
+
+        <div class="box">
+          <img src="/images/menu-2.png" alt="">
+          <h3>Coffee Granell Wild</h3>
+          <div class="price">$108.99 <span>120.99$</span></div>
+          <a href="#" class="btn" id="btn-2">add to cart</a>
+        </div>
+
+        <div class="box">
+          <img src="/images/menu-3.png" alt="">
+          <h3>Conventional Kona</h3>
+          <div class="price">$65.99 <span>80.99$</span></div>
+          <a href="#" class="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+          <img src="/images/menu-4.png" alt="">
+          <h3>Arabica Coffee</h3>
+          <div class="price">$28.99 <span>40.99$</span></div>
+          <a href="#" class="btn" id="btn-4">add to cart</a>
+        </div>
+
+        <div class="box">
+          <img src="/images/menu-5.png" alt="">
+          <h3>Monkey Business</h3>
+          <div class="price">$15.99 <span>20.99$</span></div>
+          <a href="#" class="btn" id="btn-5">add to cart</a>
+        </div>
+
+        <div class="box">
+          <img src="/images/menu-6.png" alt="">
+          <h3>tasty and healthy</h3>
+          <div class="price">$15.99 <span>20.99$</span></div>
+          <a href="#" class="btn" id="btn-6">add to cart</a>
+        </div>
+      </div>
+    </section>
+
+
+    <!--products section starts-->
+    <section class="products" id="products">
+      <h1 class="heading"><span>ourt</span>Products</h1>
+      <div class="box-container">
+        <div class="box">
+          <div class="icons">
+            <a href="#" class="fas fa-shopping-cart"></a>
+            <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-eye"></a>
+          </div>
+          <div class="image">
+            <img src="/images/product-1.png" alt="">
+          </div>
+          <div class="content">
+            <h3>fresh coffee</h3>
+            <div class="starts">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <div class="price">$15.99 <span>$20.99</span></div>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="icons">
+            <a href="#" class="fas fa-shopping-cart"></a>
+            <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-eye"></a>
+          </div>
+          <div class="image">
+            <img src="/images/product-2.png" alt="">
+          </div>
+          <div class="content">
+            <h3>fresh coffee</h3>
+            <div class="starts">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <div class="price">$15.99 <span>$20.99</span></div>
+          </div>  
+        </div>
+
+        <div class="box">
+          <div class="icons">
+            <a href="#" class="fas fa-shopping-cart"></a>
+            <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-eye"></a>
+          </div>
+          <div class="image">
+            <img src="/images/product-3.png" alt="">
+          </div>
+        <div class="content">
+            <h3>fresh coffee</h3>
+            <div class="starts">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <div class="price">$15.99 <span>$20.99</span></div>
+          </div>  
+        </div>
+      </div>
+
+    </section>
+
+
+    <!-- reviews section starts -->
+    <main id="reviews" class="reviews">
+      <h1 class="heading"><span>ourt</span>Products</h1>
+      <div class="container">
+
+        <div class="first-review">       
+            <article class="reviews">
+              <div class="img-container">
+                <img src="/images/menu-1.png" alt="" id="person-img">
+              </div>
+
+              <h2 id=  "author"></h2>
+              <p class="reviews-first-p" id="job">   
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio consectetur explicabo accusamus? Saepe, cupiditate aut.
+              </p>
+              <p class="reviews-second-p" id="info">  
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae consequatur earum nihil. Modi, excepturi consequatur.
+              </p>
+
+              <div class="button-container">
+                <button class="prev-btn">
+                  <i class="fas fa-chevron-left"></i>
+                </button>
+                <button class="next-btn">
+                  <i class="fas fa-chevron-right"></i>
+                </button>
+              </div>
+              <!-- random button -->
+              <button class="random-btn">surprise me</button>
+            </article>
+        </div>
+
+      </div>
+
+    </main>
