--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,5 +31,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="/javascript/index.js" ></script>
+<script src="/javascript/login.js"></script>
 
 </html>
