added sessions to the login page and fixed bugs

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -26,12 +26,12 @@
         <div class="login context">
           <div>
             <label for="email-login" class="user">email:</label>
-            <input type="text" id="email-login" />
+            <input class="user-input" type="text" id="email-login">
           </div>
 
           <div>
             <label for="password-login" class="user">password:</label>
-            <input type="password" id="password-login" />
+            <input  class="user-input" type="password" id="password-login" />
           </div>
           
           <button type="submit" class="btn-submit">login <i class="fa-solid fa-person-walking"></i></button>
@@ -48,15 +48,15 @@
       <form class="signup-form">
         <div>
           <label for="username-signup" class="user">username <i class="fa-solid fa-user"></i></label>
-          <input  type="text" id="username-signup" placeholder="add username" />
+          <input class="user-signup"  type="text" id="username-signup" placeholder="add username" />
         </div>
         <div>
           <label for="email-signup"  class="user" >email <i class="fa-solid fa-at"></i></label>
-          <input type="text" id="email-signup" placeholder="add email" />
+          <input class="user-signup" type="text" id="email-signup" placeholder="add email" />
         </div>
         <div>
           <label for="password-signup"  class="user">password <i class="fa-solid fa-lock"></i></label>
-          <input type="password" id="password-signup"  placeholder="add password"/>
+          <input class="user-signup" type="password" id="password-signup"  placeholder="add password"/>
         </div>
         <div>
           <button type="submit" class="btn-signup">signup <i class="fa-solid fa-right-to-bracket"></i></button>
@@ -65,3 +65,7 @@
     </div>
     
   </section>
+
+
+
+<script src="/javascript/login.js"></script>
