--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
+ .flex{
+   display: flex;
+   cursor: pointer;
+   align-items: center;
+   color: var(--main-color);
+ }
+
+ .flex .logout {
+  font-size:20px;
+   margin-top: 20px;
+   margin-left: 10px;
+ }
+
+
 :root{
   --main-color:#d3ad7f;
   --black:#13131a;
@@ -601,25 +615,25 @@ section h3{
   font-size: 55px;
 }
 
-textarea, input {
+.user-signup {
   margin-bottom: 25px;
-  padding: 2%;
+  padding: 10px 50px 10px 5px;
+  font-size: 12px;
   border-radius: 5px;
-  border: 1px solid #ccc;
+  border: 3px solid #7d4505;
   font-weight: bold;
 }
 
 
-input:hover{
-  background-color: var(--main-color);
-  color: black;
+.user-input{
+  margin-bottom: 25px;
+  padding: 5px 10px 5px 20px;
+  font-size: 15px;
+  font-weight: bold;
+  border-radius: 5px;
+  border: 3px solid #7d4505;
 }
 
-
-textarea {
-  min-width: 40%;
-  min-height: 100px;
-}
 
 form > div {
   margin-bottom: 2%;
