--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,14 @@
-
   <header class="header">
-
-      <a href="#" class="logo">
-        <img src="./img/logo.png" alt="">
-      </a>
-
+      <div class="flex">
+        <a href="#" class="logo">
+          <img src="/images/logo.png" alt="">
+        </a>
+        
+        <div class="logout" id="logout">
+          <p>logout</p>
+        </div>
+      </div>  
+    
       <nav class="navbar">
         <a href="#home">Home</a>
         <a href="#about">About</a>
@@ -44,7 +48,7 @@
       </div>
       
    </header>   
-   
+
    <!--home section starts-->
     <section class="home" id="home">
 
@@ -237,3 +241,7 @@
       </div>
 
     </main>
+
+    <script src="/javascript/index.js" ></script>
+    <script src="/javascript/logout.js"></script>
+  
