--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,7 +8,7 @@
   <section class="row">
 
     <!-- first col start here -->
-    <div class="col col-lg-8 col-sm-12" id="col-1">
+    <div class="col col-lg-8 col-sm-12 col-all" id="col-1">
       <!-- our logo  -->
       <div class="logo context">
         <img src="/images/logo.png" alt="" >
@@ -40,7 +40,7 @@
     </div>
 
     <!-- seconnd col start here -->
-    <div class="col col-lg-3 col-sm-12 col-md-5" id="col-2">
+    <div class="col col-lg-3 col-sm-12 col-md-5 col-all" id="col-2">
       <h3>
         Create Account 
       </h3>
