added functions to hide and unhide the add reviews div

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -224,23 +224,27 @@
           <button class="random-btn-add">Add Your review</button>
            <button class="random-btn-see">See all Reviews</button>
         </div>
+        <form class="form-review">
+            <div class="form-group">
+              <label for="exampleFormControlTextarea1" class="display-4">Please Add Your Review</label>
+              <textarea class="form-control" id="Textarea1" rows="5"></textarea>
+              <button type="submit" class="btn btn-primary mb-2 text-dark">Submit Your Review</button>
+            </div>
+        </form>
 
         <div class="row first-row">       
           <div class="col">
             <article class="reviews">
-                      <h2 id=  "author">author name</h2>
-                      <p class="reviews-first-p" id="job">   
-                        author comment will go here
-                      </p>
+              <h2 id=  "author">author name</h2>
+              <p class="reviews-first-p" id="job">   
+                author comment will go here
+              </p>
 
-                      <p>
-                        commented when and at what time 
-                      </p>              
+              <p>
+                commented when and at what time 
+              </p>              
             </article>
           </div>
-
-          
-        
         </div>
         
       </div>
