--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -561,7 +561,27 @@ main .container{
   display: inline;
 }
 
+.review-label{
+  font-size: 25px;
+  margin-top: 20px;
+}
 
+.form-group{
+  margin-top: 30px;
+}
+
+.form-control{
+  font-size: 20px;
+}
+
+.form-review{
+  display: none;
+}
+
+.form-review.active{
+  display: inline;
+}
+.
 /* login page css start here */
 
 .header-header{
