--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -537,6 +537,11 @@ main .container{
   margin: 25px;
 }
 
+.products .box .content .price{
+  font-size: 1.5rem;
+}
+
+
 
 .random-btn-add, .random-btn-see {
   margin-top: 16px;
@@ -581,7 +586,7 @@ main .container{
 .form-review.active{
   display: inline;
 }
-.
+
 /* login page css start here */
 
 .header-header{
