--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -74,7 +74,7 @@
 
     <!--about section starts-->
       <section class="about" id="about">
-        <h1 class="heading"><span>about</span>us</h1>
+        <h1 class="heading"><span>About</span>Us</h1>
         <div class="row">
           <div class="image">
             <img class="img" src="/images/about-img.jpeg" alt="">
@@ -94,7 +94,7 @@
 
     <!--menu section starts-->
     <section class="menu" id="menu">
-      <h1 class="heading">our <span>menu</span></h1>
+      <h1 class="heading">Our <span>Menu</span></h1>
       <div class="box-container">
         <div class="box">
           <img src="/images/menu-1.png" alt="">
@@ -143,7 +143,7 @@
 
     <!--products section starts-->
     <section class="products" id="products">
-      <h1 class="heading"><span>ourt</span>Products</h1>
+      <h1 class="heading"><span>Our</span>Products</h1>
       <div class="box-container">
         <div class="box">
           <div class="icons">
@@ -163,7 +163,7 @@
               <i class="fas fa-star"></i>
               <i class="fas fa-star-half-alt"></i>
             </div>
-            <div class="price">$15.99 <span>$20.99</span></div>
+            <div class="price">$15.99</div>
           </div>
         </div>
 
@@ -185,7 +185,7 @@
               <i class="fas fa-star"></i>
               <i class="fas fa-star-half-alt"></i>
             </div>
-            <div class="price">$15.99 <span>$20.99</span></div>
+            <div class="price">$15.99</div>
           </div>  
         </div>
 
@@ -207,7 +207,7 @@
               <i class="fas fa-star"></i>
               <i class="fas fa-star-half-alt"></i>
             </div>
-            <div class="price">$15.99 <span>$20.99</span></div>
+            <div class="price">$15.99</div>
           </div>  
         </div>
       </div>
@@ -217,7 +217,7 @@
 
     <!-- reviews section starts -->
     <main id="reviews" class="reviews">
-      <h1 class="heading"><span>ourt</span>Reviews</h1>
+      <h1 class="heading"><span>Our</span>Reviews</h1>
       <div class="container">
 
         <div class="">
@@ -237,11 +237,7 @@
             <article class="reviews">
               <h2 id=  "author">author name</h2>
               <p class="reviews-first-p" id="job">   
-                author comment will go here
-              </p>
-
-              <p>
-                commented when and at what time 
+                author comment will go here <span> and created at Created at </span>
               </p>              
             </article>
           </div>
