--- a/views/review.handlebars
+++ b/views/review.handlebars
@@ -1,1 +1,21 @@
+{{> review-info post}}
 
+{{#if loggedIn}}
+<form class="review-form">
+  <div>
+    <textarea name="review-body"></textarea>
+  </div>
+
+  <div>
+    <button type="submit">add review</button>
+    <button type="button" class="upvote-btn">upvote</button>
+  </div>
+</form>
+{{/if}}
+
+{{> reviews post.reviews}}
+
+{{#if loggedIn}}
+<script src="/javascript/review-page.js"></script>
+<script src="/javascript/upvote.js"></script>
+{{/if}}
