--- a/views/partials/review-info.handlebars
+++ b/views/partials/review-info.handlebars
@@ -1,11 +1,12 @@
-<article class="review">
-  <div class="title">
-    <a href="{{review_url}}" target="_blank">{{title}}</a>
-    <span>({{format_url review_url}})</span>
-  </div>
-  <div class="meta">
-    {{vote_count}} {{format_plural "point" vote_count}} by {{user.username}} on {{format_date created_at}}
-    |
-    <a href="/review/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
-  </div>
-</article>
+<div class="review">
+    {{#each this}}
+    <section class="review">
+        <div class="meta">
+            {{user.username}} on {{format_date created_at}}
+        </div>
+        <div class="text">
+            {{review_text}}
+        </div>
+    </section>
+    {{/each}}
+</div>
