Modified some text on the pages, added items as a model, and started item-route.js

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -62,9 +62,9 @@
     <section class="home" id="home">
 
       <div class="content">
-        <h3>fresh coffe in the morning</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Adipisci possimus, ratione debitis officia soluta laudantium?</p>
+        <h3>coffees from around the world</h3>
+        <p>We have traveled the world, and curated the best offerings from countries around the globe.
+          The coffees available are rotational by nature, since we are always on the lookout for new tastes, and experiences.</p>
         <a href="" class="btn">get yours now</a>   
       </div>
     </section>
