revert lost commit

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -62,11 +62,9 @@
             <img class="img" src="/images/about-img.jpeg" alt="">
           </div>
           <div class="content">
-            <h3>what makes our coffee special</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, quibusdam repellendus? Provident vero et,
-              ea labore voluptate similique dignissimos ullam. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Quos, culpa ex minima dolor molestiae impedit.</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis itaque rem asperiores eius. Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            <h3>coffees from around the world</h3>
+            <p>We have traveled the world, and curated the best offerings from countries around the globe.
+               The coffees available are rotational by nature, since we are always on the lookout for new tastes, and experiences.</p>
             <a href="#menu" class="btn">learn more</a>
           </div>
         </div>
