--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -47,9 +47,9 @@
    <!--home section starts-->
     <section class="home" id="home">
       <div class="content">
-        <h3>fresh coffe in the morning</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Adipisci possimus, ratione debitis officia soluta laudantium?</p>
+        <h3>Fresh coffe in the morning </h3>
+        <p>We have traveled the world, and curated the best offerings from countries around the globe.
+          The coffees available are rotational by nature, since we are always on the lookout for new tastes, and experiences.</p>
         <a href="" class="btn">get yours now</a>
       </div>
     </section>
@@ -62,9 +62,10 @@
             <img class="img" src="/images/about-img.jpeg" alt="">
           </div>
           <div class="content">
-            <h3>coffees from around the world</h3>
+            <h3>What makes our coffee special</h3>
             <p>We have traveled the world, and curated the best offerings from countries around the globe.
-               The coffees available are rotational by nature, since we are always on the lookout for new tastes, and experiences.</p>
+               The coffees available are rotational by nature,<br> since we are always on the lookout for new tastes, and experiences.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis itaque rem asperiores eius. Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
             <a href="#menu" class="btn">learn more</a>
           </div>
         </div>
