Finalized page wording for good UX, and changed product wording to match up with inventory

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,7 +18,7 @@
       <div class="context">
         <h2>Welcome Back!</h2>
         <!-- first paragraph -->
-        <p>To keep connected with us please loging with your personal info</p>
+        <p>To connect with us please login with your personal info</p>
       </div>
       
       <!-- sign in button -->
