--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -68,7 +68,7 @@
         <a href="" class="btn">get yours now</a>   
       </div>
     </section>
-     <!--home section ends-->
+    <!--home section ends-->
 
 
 
@@ -81,10 +81,9 @@
           </div>
           <div class="content">
             <h3>what makes our coffee special</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, quibusdam repellendus? Provident vero et, 
-              ea labore voluptate similique dignissimos ullam. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Quos, culpa ex minima dolor molestiae impedit.</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis itaque rem asperiores eius. Lorem ipsum dolor sit amet, consectetur adipisicing.</p>  
+            <p>Our team of experts have spent a lifetime enjoying coffee from all over the world. As our travels take us to various countries, we enjoy connecting with the culture through the coffee they enjoy most, or the coffee they find special.
+            </p>
+            <p>So many cultures around the world have a deep connection to the bittersweet drink, and we do too. Imagine taking a trip abroad and immediately finding the best coffee that country has to offer. That's the experience we offer here, come, take a trip with us.</p>  
             <a href="#menu" class="btn">learn more</a>
           </div>
         </div>
@@ -98,43 +97,43 @@
       <div class="box-container">
         <div class="box">
           <img src="/images/menu-1.png" alt="">
-          <h3>Organic Kona Coffee</h3>
+          <h3>Organic Kona coffee from Hawai'i</h3>
           <div class="price">$62.99 <span>110$</span></div>
           <a href="#" class="btn" id="btn-1" >add to cart</a>
         </div>
 
         <div class="box">
           <img src="/images/menu-2.png" alt="">
-          <h3>Coffee Granell Wild</h3>
+          <h3>Granell Wild coffee from Indonesia</h3>
           <div class="price">$108.99 <span>120.99$</span></div>
           <a href="#" class="btn" id="btn-2">add to cart</a>
         </div>
 
         <div class="box">
           <img src="/images/menu-3.png" alt="">
-          <h3>Conventional Kona</h3>
+          <h3>Leeroy Jenkins coffee from Guatemala</h3>
           <div class="price">$65.99 <span>80.99$</span></div>
           <a href="#" class="btn">add to cart</a>
         </div>
 
         <div class="box">
           <img src="/images/menu-4.png" alt="">
-          <h3>Arabica Coffee</h3>
-          <div class="price">$28.99 <span>40.99$</span></div>
+          <h3>Jamaica Blue coffee from Jamaica</h3>
+          <div class="price">$98.99 <span>40.99$</span></div>
           <a href="#" class="btn" id="btn-4">add to cart</a>
         </div>
 
         <div class="box">
           <img src="/images/menu-5.png" alt="">
-          <h3>Monkey Business</h3>
-          <div class="price">$15.99 <span>20.99$</span></div>
+          <h3>Nakayama Arabica coffee from Okinawa</h3>
+          <div class="price">$175.99 <span>20.99$</span></div>
           <a href="#" class="btn" id="btn-5">add to cart</a>
         </div>
 
         <div class="box">
           <img src="/images/menu-6.png" alt="">
-          <h3>tasty and healthy</h3>
-          <div class="price">$15.99 <span>20.99$</span></div>
+          <h3>Peaberry Arabica coffee from Brazil</h3>
+          <div class="price">$155.99 <span>20.99$</span></div>
           <a href="#" class="btn" id="btn-6">add to cart</a>
         </div>
       </div>
@@ -142,8 +141,10 @@
 
 
     <!--products section starts-->
+    <!--recommend changing this section to 'Most popular products'-->
+    <!--The change has already been made to the text displayed in html-->
     <section class="products" id="products">
-      <h1 class="heading"><span>Our</span>Products</h1>
+      <h1 class="heading"><span>Our</span>Most popular products</h1>
       <div class="box-container">
         <div class="box">
           <div class="icons">
@@ -155,7 +156,7 @@
             <img src="/images/product-1.png" alt="">
           </div>
           <div class="content">
-            <h3>fresh coffee</h3>
+            <h3>Number 1 rated for 6 months!</h3>
             <div class="starts">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -177,7 +178,7 @@
             <img src="/images/product-2.png" alt="">
           </div>
           <div class="content">
-            <h3>fresh coffee</h3>
+            <h3>Number 2 rated for 4 weeks!</h3>
             <div class="starts">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -199,7 +200,7 @@
             <img src="/images/product-3.png" alt="">
           </div>
         <div class="content">
-            <h3>fresh coffee</h3>
+            <h3>Number 3 rated for 1 year!</h3>
             <div class="starts">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -222,7 +223,7 @@
 
         <div class="">
           <button class="random-btn-add">Add Your review</button>
-           <button class="random-btn-see">See all Reviews</button>
+          <button class="random-btn-see">See all Reviews</button>
         </div>
         <form class="form-review">
             <div class="form-group">
