--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -644,15 +644,23 @@ section{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
 }
 
-.login-form{
-  margin-right: 600px;
+.login-context {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  margin-left: 55px;
+}
+
+#logo-image{
+  margin-top: 5px;
+  margin-bottom: 20px;
 }
 
 section h2{
-  margin-top: 55px;
+  margin-top: 5px;
   font-size: 55px;
 }
 
@@ -688,12 +696,21 @@ section h2{
 
 section #col-2{
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-section h3{
-  margin-top: 55px;
+section .create-h3{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--main-color);
+  box-shadow: 0px 5px 10px var(--main-color);
+  color: black;
+  border-radius: 10px;
   margin-bottom: 35px;
-  font-size: 55px;
+  font-size: 35px;
 }
 
 .user-signup {
@@ -824,8 +841,35 @@ form label {
 }
 }
 
-@media (max-width:450px){
+@media (max-width:550px){
 html{
   font-size: 50%;
 }
+
+#col-1{
+  width: 100%;
+  margin-right: 20px;
+  padding: 15px;
+}
+
+#col-2{
+  width: 100%;
+  margin-right: 20px;
+  padding: 15px;
+}
+
+
+
+section .create-h3{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--main-color);
+  box-shadow: 0px 5px 10px var(--main-color);
+  color: black;
+  border-radius: 10px;
+  margin-bottom: 35px;
+  font-size: 25px;
+}
+
 }
