fixed errors in the welcome page

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -46,11 +46,12 @@
    </header>
    <!--home section starts-->
     <section class="home" id="home">
+
       <div class="content">
-        <h3>Fresh coffe in the morning </h3>
+        <h3>coffees from around the world</h3>
         <p>We have traveled the world, and curated the best offerings from countries around the globe.
           The coffees available are rotational by nature, since we are always on the lookout for new tastes, and experiences.</p>
-        <a href="" class="btn">get yours now</a>
+        <a href="" class="btn">get yours now</a>   
       </div>
     </section>
     <!--home section ends-->
