--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,8 @@
+{{!-- set a loader while it's loading the html --}}
+<div class='spinner-wrapper'>
+  <div class="spinner"></div>
+</div> 
+
 <header class="header">
       <div class="flex">
         {{!-- <select name="" id="">
@@ -232,3 +237,4 @@
     <script src="/javascript/index.js" ></script>
     <script src="/javascript/logout.js"></script>
     <script src="/javascript/review-page.js"></script>
+    <script src="/"></script>
