--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -35,7 +35,7 @@
         <label for="search-box" class="fas fa-search"></label>
       </div>
       {{!-- Kevin! this is where the items will go, you just need to change the cart item h3 and the price with the exact data --}}
-      {{!-- and you need to add the #each methode to display all the items that are selected  --}}
+      {{!-- and you need to add the #each method to display all the items that are selected  --}}
       <div class="cart-items-container" id="cart-items-container">
         <div class="cart-item" id="cart-item item-one">
           <img src="/images/cart-item-1.png" alt="">
