update item routes and updates itme tabel

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -89,37 +89,37 @@
           <img src="/images/menu-1.png" alt="">
           <h3>Organic Kona coffee from Hawai'i</h3>
           <div class="price">$62.99 <span>110$</span></div>
-          <a href="#" class="btn" id="btn-1" >add to cart</a>
+          <a href="#" class="btn new-item-form-1" id="btn-1" >add to cart</a>
         </div>
         <div class="box">
           <img src="/images/menu-2.png" alt="">
           <h3>Granell Wild coffee from Indonesia</h3>
           <div class="price">$108.99 <span>120.99$</span></div>
-          <a href="#" class="btn" id="btn-2">add to cart</a>
+          <a href="#" class="btn new-item-form-2" id="btn-2">add to cart</a>
         </div>
         <div class="box">
           <img src="/images/menu-3.png" alt="">
           <h3>Leeroy Jenkins coffee from Guatemala</h3>
           <div class="price">$65.99 <span>80.99$</span></div>
-          <a href="#" class="btn">add to cart</a>
+          <a href="#" class="btn new-item-form-3">add to cart</a>
         </div>
         <div class="box">
           <img src="/images/menu-4.png" alt="">
           <h3>Jamaica Blue coffee from Jamaica</h3>
           <div class="price">$98.99 <span>40.99$</span></div>
-          <a href="#" class="btn" id="btn-4">add to cart</a>
+          <a href="#" class="btn new-item-form-4" id="btn-4">add to cart</a>
         </div>
         <div class="box">
           <img src="/images/menu-5.png" alt="">
           <h3>Nakayama Arabica coffee from Okinawa</h3>
           <div class="price">$175.99 <span>20.99$</span></div>
-          <a href="#" class="btn" id="btn-5">add to cart</a>
+          <a href="#" class="btn new-item-form-5" id="btn-5">add to cart</a>
         </div>
         <div class="box">
           <img src="/images/menu-6.png" alt="">
           <h3>Peaberry Arabica coffee from Brazil</h3>
           <div class="price">$155.99 <span>20.99$</span></div>
-          <a href="#" class="btn" id="btn-6">add to cart</a>
+          <a href="#" class="btn new-item-form-6" id="btn-6">add to cart</a>
         </div>
       </div>
     </section>
@@ -238,3 +238,4 @@
     <script src="/javascript/logout.js"></script>
     <script src="/javascript/review-page.js"></script>
     <script src="/javascript/spinner.js"></script>
+    <script src="/javascript/add-items.js"></script>
