fixed the items-route to give us access to post the items data and get it from the database

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -86,38 +86,38 @@
       <h1 class="heading">Our <span>Menu</span></h1>
       <div class="box-container">
         <div class="box">
-          <img src="/images/menu-1.png" alt="">
-          <h3>Organic Kona coffee from Hawai'i</h3>
-          <div class="price">$62.99 <span>110$</span></div>
+          <img  src="/images/menu-1.png" alt="">
+          <h3 class="heading-1">Organic Kona coffee from Hawai'i</h3>
+          <div class="price"> <div class="price-1"> 62.99</div><span>110$</span></div>
           <a href="#" class="btn new-item-form-1" id="btn-1" >add to cart</a>
         </div>
         <div class="box">
           <img src="/images/menu-2.png" alt="">
-          <h3>Granell Wild coffee from Indonesia</h3>
-          <div class="price">$108.99 <span>120.99$</span></div>
-          <a href="#" class="btn new-item-form-2" id="btn-2">add to cart</a>
+          <h3 class="heading-2">Granell Wild coffee from Indonesia</h3>
+          <div class="price price-2">$108.99 <span>120.99$</span></div>
+          <a href="#"  class="btn new-item-form-2" id="btn-2">add to cart</a>
         </div>
         <div class="box">
           <img src="/images/menu-3.png" alt="">
-          <h3>Leeroy Jenkins coffee from Guatemala</h3>
+          <h3 class="heading-3" >Leeroy Jenkins coffee from Guatemala</h3>
           <div class="price">$65.99 <span>80.99$</span></div>
           <a href="#" class="btn new-item-form-3">add to cart</a>
         </div>
         <div class="box">
           <img src="/images/menu-4.png" alt="">
-          <h3>Jamaica Blue coffee from Jamaica</h3>
+          <h3 class="heading-4" >Jamaica Blue coffee from Jamaica</h3>
           <div class="price">$98.99 <span>40.99$</span></div>
           <a href="#" class="btn new-item-form-4" id="btn-4">add to cart</a>
         </div>
         <div class="box">
           <img src="/images/menu-5.png" alt="">
-          <h3>Nakayama Arabica coffee from Okinawa</h3>
+          <h3 class="heading-5" >Nakayama Arabica coffee from Okinawa</h3>
           <div class="price">$175.99 <span>20.99$</span></div>
           <a href="#" class="btn new-item-form-5" id="btn-5">add to cart</a>
         </div>
         <div class="box">
           <img src="/images/menu-6.png" alt="">
-          <h3>Peaberry Arabica coffee from Brazil</h3>
+          <h3 class="heading-6" >Peaberry Arabica coffee from Brazil</h3>
           <div class="price">$155.99 <span>20.99$</span></div>
           <a href="#" class="btn new-item-form-6" id="btn-6">add to cart</a>
         </div>
