--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -160,6 +160,7 @@ header .search-form label {
 }
 
 .header .cart-items-container {
+  overflow: scroll;
   position: absolute;
   top: 100%;
   right: -100%;
