--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -96,42 +96,42 @@
         <div class="box">
           <img src="/images/menu-1.png" alt="">
           <h3 class="heading-1">Organic Kona coffee from Hawai'i</h3>
-          <div class="price"><div class="price-1 prices">62.99 <div class="dollar-sign">$</div></div><span>110$</span></div>
+          <div class="price"><div class="price-1 prices">62.99</div><div class="dollar-sign">$</div><span>110$</span></div>
           <a href="#" class="btn new-item-form-1" id="btn-1" >add to cart</a>
         </div>
 
         <div class="box">
           <img src="/images/menu-2.png" alt="">
           <h3 class="heading-2">Granell Wild coffee from Indonesia</h3>
-          <div class="price"><div class="price-2 prices">108.99 <div class="dollar-sign">$</div></div><span>120.99$</span></div>
+          <div class="price"><div class="price-2 prices">108.99</div><div class="dollar-sign">$</div><span>120.99$</span></div>
           <a href="#"  class="btn new-item-form-2" id="btn-2">add to cart</a>
         </div>
 
         <div class="box">
           <img src="/images/menu-3.png" alt="">
           <h3 class="heading-3" >Leeroy Jenkins coffee from Guatemala</h3>
-          <div class="price"><div class="prices price-3">65.99 <div class="dollar-sign">$</div></div><span>40.99$</span></div>
+          <div class="price"><div class="prices price-3">65.99</div><div class="dollar-sign">$</div><span>40.99$</span></div>
           <a href="#" class="btn new-item-form-3">add to cart</a>
         </div>
 
         <div class="box">
           <img src="/images/menu-4.png" alt="">
           <h3 class="heading-4" >Jamaica Blue coffee from Jamaica</h3>
-          <div class="price"><div class="price-4 prices">98.99 <div class="dollar-sign">$</div></div><span>50.99$</span></div>
+          <div class="price"><div class="price-4 prices">98.99</div><div class="dollar-sign">$</div><span>50.99$</span></div>
           <a href="#" class="btn new-item-form-4" id="btn-4">add to cart</a>
         </div>
 
         <div class="box">
           <img src="/images/menu-5.png" alt="">
           <h3 class="heading-5" >Nakayama Arabica coffee from Okinawa</h3>
-          <div class="price"><div class="price-5 prices">175.99 <div class="dollar-sign">$</div></div><span>90.99$</span></div>
+          <div class="price"><div class="price-5 prices">175.99</div><div class="dollar-sign">$</div><span>90.99$</span></div>
           <a href="#" class="btn new-item-form-5" id="btn-5">add to cart</a>
         </div>
 
         <div class="box">
           <img src="/images/menu-6.png" alt="">
           <h3 class="heading-6" >Peaberry Arabica coffee from Brazil</h3>
-          <div class="price"><div class="price-6 prices">155.99 <div class="dollar-sign">$</div></div><span>115.99$</span></div>
+          <div class="price"><div class="price-6 prices">155.99</div><div class="dollar-sign">$</div><span>115.99$</span></div>
           <a href="#" class="btn new-item-form-6" id="btn-6">add to cart</a>
         </div>
 
