added a delete function to the items section

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -854,6 +854,10 @@ html{
   padding: 15px;
 }
 
+.about .image img{
+  display: none;
+}
+
 .products .box-container {
   display: grid;
   grid-template-columns: 1fr;
