--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -45,7 +45,7 @@
             <h3>{{item.item_name}}</h3>
             <div class="price">${{item.item_price}}</div>
           </div>
-          <span class="fas fa-times"></span>
+          <span class="fas fa-times" data-x="{{item.id}}" ></span>
         </div>
         {{/each}}
         {{/if}}
@@ -261,3 +261,4 @@
     <script src="/javascript/review-page.js"></script>
     <script src="/javascript/spinner.js"></script>
     <script src="/javascript/add-items.js"></script>
+    <script src="/javascript/delete-item.js"></script>
