--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
   <!--Google fonts link-->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
-  <title>Document</title>
+  <title>Coffee Shop</title>
 </head>
 
 <body class="body">
